--- a/Register.html
+++ b/Register.html
@@ -1,21 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>Epool Log-In</title>
+  <title>Epool Sign-Up</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <style>
       .login {
           text-align: center;
       }
-      #logo {
+    #logo {
           width: 400px;
           margin-bottom: 30px;
           margin-top: 90px;
       }
       .user{
+        width: 250px;
           padding-right: 90px;
-          width: 250px;
           padding-top: 20px;
           margin-bottom: 30px;
           border: none;
@@ -24,19 +24,25 @@
     border-radius: 2px;
       }
       .password{
-        padding-right: 90px;
         width: 250px;
+        padding-right: 90px;
           padding-top: 20px;
+          margin-bottom: 30px;
           border: none;
           background-color: rgb(233, 232, 232);
     border-bottom: 2px solid rgb(179, 179, 179);
     border-radius: 2px;
       }
-      .forgot{
-          font-size: 8pt;
-          margin-left: -200px;
+      
+      .confPassword{
+          width: 250px;
+        padding-right: 90px;
+          padding-top: 20px;
           margin-bottom: 30px;
-
+          border: none;
+          background-color: rgb(233, 232, 232);
+    border-bottom: 2px solid rgb(179, 179, 179);
+    border-radius: 2px;
       }
 
       .in{
@@ -51,38 +57,8 @@
     margin: 4px 2px;
     cursor: pointer;
     border-radius: 4px;
-          margin-bottom: 10px;
-          box-shadow: 1px 2px 5px #888888;
+    box-shadow: 1px 2px 5px #888888;
       }
-      .up{
-        text-decoration:none
-      }
-      .forg{
-        text-decoration:none;
-        font-size: 8pt;
-          margin-left: -235px;
-          margin-bottom: 30px;
-      }
-
-      a:link {
-    color: #2C98F0;
-    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-        }
-
-        /* visited link */
-        a:visited {
-            color: rgb(28, 100, 158);
-        }
-
-        /* mouse over link */
-        a:hover {
-            color: rgb(119, 185, 240);
-        }
-
-        /* selected link */
-        a:active {
-            color: rgb(240, 44, 44);
-        }
       
    </style>
    </head>
@@ -95,13 +71,11 @@
             <br>
 
             <input class="password" type="password" name="password" placeholder="Password" required="required">
-
-            <p ><a href class="forg">FORGOT PASSWORD</a></p>
-            <input class="in" type="Submit" value="SIGN IN"/>
             <br>
-            <p >
-                    <a href="Register.html" class="up">SIGN UP</a>
-            </p>
+            <input class="confPassword" type="password" name="password" placeholder="Confirm Password" required="required">
+            <br>
+            <input class="in" type="Submit" value="SIGN UP"/>
+            <br>
           </form>
         </div>
 
