--- a/CreateAPool.html
+++ b/CreateAPool.html
@@ -4,6 +4,16 @@
   <title>Create A Pool</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
+  <link rel="stylesheet" href="/resources/demos/style.css">
+  <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
+  <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
+  <script>
+  $(document).ready(function(){$( "#datepicker" ).datepicker({
+        showOn: "button",
+        buttonText: "Dates"
+    });});
+  </script>
   <style>
       body, html{
         margin: 0;
@@ -17,9 +27,12 @@
 
       #sidebar{
         float: left;
-        box-shadow: 5px 10px 8px #888888;
+        box-shadow: 3px 5px 8px #888888;
         height: 100%;
-        width: 300px;
+        width: 250px;
+        height: 750px;
+        overflow: hidden;
+        font-family: Bahnschrift Condensed;
       }
       #main{
           text-align: center;
@@ -53,28 +66,20 @@
         color: white;
       }
 
-      #dates {
+      /* #dates {
         background-color: #1892dd;
         color: white;
-      }
+      } */
 
       button[type="submit"] {
         background-color: #d69142;
         color: white;
       }
       #userinfo {
-        width: 100%;
-        height: 100px;
-        background-color: #005a96;
-      }
-
-      #userinfo img {
-        transform: translate(20%, 25%);
-        float: left;
-      }
-
-      #sidebar h3 {
-        padding-left: 10px;
+        background-color: #2C98F0;
+        color: white;
+        height: 120px;
+        box-shadow: 0px 2px 5px #888888;
       }
 
       #userinfo p {
@@ -83,13 +88,56 @@
         color: white;
         font-weight: bold;
       }
+      #logo {
+          width: 80px;
+          float: left;
+          margin-top: 22px;
+          margin-left: 5px;
+      }
+
+      #username {
+          margin: 0px;
+          padding: 20px;
+          padding-top: 48px;
+          padding-left: 90px;
+      }
+
+      #sidebar a:visited {
+          color: rgb(80, 80, 80);
+      }
+
+      /* mouse over link */
+      #sidebar a:hover {
+          color: rgb(179, 179, 179);
+
+      }
+
+      /* selected link */
+      #sidebar a:active {
+          color: #2C98F0;
+      }
+
+      #sidebar a:link {
+          color: rgb(80, 80, 80);
+          text-decoration:none;
+          padding: 20px;
+      }
+
+      #sidebar h3 {
+          padding-top: 20px;
+          font-size: 20pt;
+      }
+
+      #datepicker {
+        display: none;
+      }
 
    </style>
 </head>
 <body>
     <div id="cont">
       <div id="sidebar">
-        <div id="userinfo"><img src="ResourcesDavid/user.png" alt="USER"/><p id="username">User Name</p></div>
+        <div id="userinfo"><img id="logo" src="ResourcesDavid/icons8-customer-64.png" alt="USER"/><h2 id="username">User1</h2></div>
         <h3><a href>Dashboard</a></h3>
         <h3><a href>Rides</a></h3>
         <h3><a href>Schedule</a></h3>
@@ -111,7 +159,7 @@
           <br/>
           <input id="destination" class="textfield" type="text" name="destination" placeholder="Enter Destination">
           <br/>
-          <button id="dates" type="button" name="dates" class="buttons">DATES</button>
+          <input id="datepicker" type="input" name="dates" class="datepicker"></input>
           <button type="submit" name="submit" class="buttons">SUBMIT</button>
         </form>
       </div>
