--- a/Dash.html
+++ b/Dash.html
@@ -200,7 +200,7 @@ padding-bottom: 60px;
             
             <div class="nav">
                     <button class="button1">
-                            <a href>Create a Pool</a>
+                            <a href = "CreateAPool.html">Create a Pool</a>
                           </button>
                           <button class="button2">
                                 <a href>View Car-Pools</a>
