--- a/Log.html
+++ b/Log.html
@@ -4,6 +4,23 @@
   <title>Epool Log-In</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <script src="https://cdn.firebase.com/libs/firebaseui/3.1.1/firebaseui.js"></script>
+  <link type="text/css" rel="stylesheet" href="https://cdn.firebase.com/libs/firebaseui/3.1.1/firebaseui.css" />
+
+<script src="https://www.gstatic.com/firebasejs/5.5.9/firebase.js"></script>
+<script>
+  // Initialize Firebase
+  var config = {
+    apiKey: "AIzaSyAXJ-_zPVCd0bOd6PpOyV1oE_wylsHpWWM",
+    authDomain: "projects-group-30-database.firebaseapp.com",
+    databaseURL: "https://projects-group-30-database.firebaseio.com",
+    projectId: "projects-group-30-database",
+    storageBucket: "projects-group-30-database.appspot.com",
+    messagingSenderId: "15248780008"
+  };
+  firebase.initializeApp(config);
+</script>
+  </script>
   <style>
       .login {
           text-align: center;
@@ -83,27 +100,50 @@
         a:active {
             color: rgb(240, 44, 44);
         }
-      
+
    </style>
    </head>
 <body>
+  <script>
+  var ui = new firebaseui.auth.AuthUI(firebase.auth());
+  </script>
     <div class="login">
         <img id= "logo" src="resourcesDavid/Untitled (2).png" alt="Epool">
-    <form>
-            
-            <input class="user" type="text" name="firstname" placeholder="Email or Username" required="required">
-            <br>
-
-            <input class="password" type="password" name="password" placeholder="Password" required="required">
-
-            <p ><a href class="forg">FORGOT PASSWORD</a></p>
-            <input class="in" type="Submit" value="SIGN IN"/>
-            <br>
-            <p >
-                    <a href="Register.html" class="up">SIGN UP</a>
-            </p>
-          </form>
+          <div id="firebaseui-auth-container"></div>
         </div>
+
+        <script>
+          var uiConfig = {
+          callbacks: {
+            signInSuccessWithAuthResult: function(authResult, redirectUrl) {
+              // User successfully signed in.
+              // Return type determines whether we continue the redirect automatically
+              // or whether we leave that to developer to handle.
+              return true;
+            },
+            uiShown: function() {
+              // The widget is rendered.
+              // Hide the loader.
+              document.getElementById('loader').style.display = 'none';
+            }
+          },
+          // Will use popup for IDP Providers sign-in flow instead of the default, redirect.
+          signInFlow: 'popup',
+          signInSuccessUrl: 'Dash.html',
+          signInOptions: [
+            // Leave the lines as is for the providers you want to offer your users.
+
+            firebase.auth.EmailAuthProvider.PROVIDER_ID
+          ],
+          // Terms of service url.
+          tosUrl: 'main.html',
+          // Privacy policy url.
+          privacyPolicyUrl: 'main.html'
+        };
+
+        // The start method will wait until the DOM is loaded.
+        ui.start('#firebaseui-auth-container', uiConfig);
+        </script>
 
   </body>
 </html>
